--- a/styles/header.css
+++ b/styles/header.css
@@ -17,7 +17,10 @@
 
 .topnav a:hover {
     background-color: rgb(83, 71, 71);
-    color: black;
+    color: rgb(231, 214, 214);
+    font-size: 24px;
+    -webkit-transition: width 1s;
+    transition: width 1s;
 }
 
 .topnav a.active {
