--- a/styles/webcard.css
+++ b/styles/webcard.css
@@ -1,8 +1,15 @@
+body {
+    background-image: url("../img/webcard_back.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
     text-align: center;
+    background-color: whitesmoke;
 }
 
 .title {
@@ -32,4 +39,52 @@ a {
 button:hover,
 a:hover {
     opacity: 0.7;
+}
+
+.card-back {
+    padding: 1%;
+}
+
+@media screen and (max-width: 1000px) {
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        max-width: 190px;
+        margin: auto;
+        text-align: center;
+        background-color: whitesmoke;
+    }
+    .title {
+        color: grey;
+        font-size: 15px;
+    }
+    h1 {
+        font-size: 20px;
+    }
+    p {
+        font-size: 15px;
+    }
+    button {
+        border: none;
+        outline: 0;
+        display: inline-block;
+        padding: 8px;
+        color: white;
+        background-color: #000;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
+        font-size: 18px;
+    }
+    a {
+        text-decoration: none;
+        font-size: 22px;
+        color: black;
+    }
+    button:hover,
+    a:hover {
+        opacity: 0.7;
+    }
+    .card-back {
+        padding: 1%;
+    }
 }
