--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,8 +10,8 @@ body:before {
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.7;
-    background-image: url('../img/contact.jpg');
+    /*opacity: 0.7;*/
+    background-image: url('../img/Contact2.jpg');
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
