--- a/styles/about.css
+++ b/styles/about.css
@@ -34,7 +34,38 @@ img {
 }
 
 @media screen and (max-width: 1000px) {
+    .all {
+        display: block;
+        /*flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;*/
+        margin: 0.5%;
+    }
+    .middle {
+        margin: 0%;
+        width: 80%;
+        position: relative;
+        /*display: flex;
+        justify-content: center;
+        align-items: center;*/
+    }
+    .container {
+        position: relative;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        width: 110%;
+        padding: 7%;
+    }
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 3vw;
+        line-height: 1.3em;
+    }
     img {
-        width: 70%;
+        width: 97%;
     }
 }
