--- a/styles/flipcard.css
+++ b/styles/flipcard.css
@@ -17,8 +17,15 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 16.5px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+p {
+    font-size: 11px;
+    letter-spacing: 0.7px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
 img {
@@ -79,12 +86,19 @@ img {
     background: #413f3f;
 }
 
-.card-front-content,
-.card-back-content {
+.card-front-content {
     padding: 2em;
     box-sizing: border-box;
     text-align: center;
-    line-height: 2.6em;
+    /*line-height: 2.6em;*/
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.card-back-content {
+    padding: 0.5em;
+    box-sizing: border-box;
+    text-align: center;
+    /*line-height: 2.6em;*/
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
