--- a/styles/flipcard.css
+++ b/styles/flipcard.css
@@ -130,8 +130,14 @@ img {
     }
     h1 {
         text-align: center;
-        font-size: 1.5em;
+        font-size: 12.5px;
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    }
+    p {
+        font-size: 8px;
+        letter-spacing: 0.7px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
     }
     img {
         width: 90px;
@@ -185,12 +191,17 @@ img {
         transform: rotateY(179.9deg);
         background: #413f3f;
     }
-    .card-front-content,
-    .card-back-content {
+    .card-front-content {
         /*padding: 2em;*/
         box-sizing: border-box;
         text-align: center;
         line-height: 2.6em;
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    }
+    .card-back-content {
+        box-sizing: border-box;
+        text-align: center;
+        /*line-height: 2.6em;*/
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
 }
