--- a/styles/contact.css
+++ b/styles/contact.css
@@ -50,5 +50,36 @@ img:hover {
     width: 110px;
     height: 110px;
     -webkit-transition: width 1s;
-    transition: width 1s;
+    transition: width 2s;
+}
+
+@media screen and (max-width: 1000px) {
+    .icons {
+        /*padding: 3%;*/
+        height: 20%;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-end;
+        flex-wrap: wrap;
+    }
+    .text {
+        font-family: 'Luxurious Roman', cursive;
+        font-size: 10vw;
+        font-weight: 600;
+        height: 40%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+    img {
+        height: 4em;
+        width: 95%;
+        /*padding-top: 3%;*/
+    }
+    img:hover {
+        width: 5em;
+        height: 4.8em;
+        -webkit-transition: width 1s;
+        transition: width 1s;
+    }
 }
