--- a/styles/about.css
+++ b/styles/about.css
@@ -63,9 +63,9 @@ img {
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 3vw;
-        line-height: 1.2em;
+        line-height: 3.5vw;
     }
     img {
-        width: 100%;
+        width: 97%;
     }
 }
